--- a/configs/instrumentals_vocals.yaml
+++ b/configs/instrumentals_vocals.yaml
@@ -23,18 +23,18 @@ pages:
         createAnchor70: false
         stimuli:
             C1: configs/resources/audio/Driver 1/1 Low Vocals.wav
-            #C2: configs/resources/audio/Driver 2/2 Low Vocals.wav
-            #C3: configs/resources/audio/Driver 4/4 Low Vocals.wav
-            #C4: configs/resources/audio/Driver 5/5 Low Vocals.wav
-            #C5: configs/resources/audio/Driver 6/6 Low Vocals.wav
-            #C6: configs/resources/audio/Driver 7/7 Low Vocals.wav
-            #C7: configs/resources/audio/Driver 8/8 Low Vocals.wav
-            #C8: configs/resources/audio/Driver 9/9 Low Vocals.wav
-            #C9: configs/resources/audio/Driver 10/10 Low Vocals.wav
-            #C10: configs/resources/audio/Driver 11/11 Low Vocals.wav
-            #C11: configs/resources/audio/Driver 12/12 Low Vocals.wav
-            #C12: configs/resources/audio/Driver 13/13 Low Vocals.wav
-            #C13: configs/resources/audio/Driver 14/14 Low Vocals.wav
+            C2: configs/resources/audio/Driver 2/2 Low Vocals.wav
+            C3: configs/resources/audio/Driver 4/4 Low Vocals.wav
+            C4: configs/resources/audio/Driver 5/5 Low Vocals.wav
+            C5: configs/resources/audio/Driver 6/6 Low Vocals.wav
+            C6: configs/resources/audio/Driver 7/7 Low Vocals.wav
+            C7: configs/resources/audio/Driver 8/8 Low Vocals.wav
+            C8: configs/resources/audio/Driver 9/9 Low Vocals.wav
+            C9: configs/resources/audio/Driver 10/10 Low Vocals.wav
+            C10: configs/resources/audio/Driver 11/11 Low Vocals.wav
+            C11: configs/resources/audio/Driver 12/12 Low Vocals.wav
+            C12: configs/resources/audio/Driver 13/13 Low Vocals.wav
+            C13: configs/resources/audio/Driver 14/14 Low Vocals.wav
       
     - type: generic
       id: second_page
@@ -53,18 +53,18 @@ pages:
         createAnchor70: false
         stimuli:
             C1: configs/resources/audio/Driver 1/1 Mid Vocals.wav
-            #C2: configs/resources/audio/Driver 2/2 Mid Vocals.wav
-            #C3: configs/resources/audio/Driver 4/4 Mid Vocals.wav
-            #C4: configs/resources/audio/Driver 5/5 Mid Vocals.wav
-            #C5: configs/resources/audio/Driver 6/6 Mid Vocals.wav
-            #C6: configs/resources/audio/Driver 7/7 Mid Vocals.wav
-            #C7: configs/resources/audio/Driver 8/8 Mid Vocals.wav
-            #C8: configs/resources/audio/Driver 9/9 Mid Vocals.wav
-            #C9: configs/resources/audio/Driver 10/10 Mid Vocals.wav
-            #C10: configs/resources/audio/Driver 11/11 Mid Vocals.wav
-            #C11: configs/resources/audio/Driver 12/12 Mid Vocals.wav
-            #C12: configs/resources/audio/Driver 13/13 Mid Vocals.wav
-            #C13: configs/resources/audio/Driver 14/14 Mid Vocals.wav
+            C2: configs/resources/audio/Driver 2/2 Mid Vocals.wav
+            C3: configs/resources/audio/Driver 4/4 Mid Vocals.wav
+            C4: configs/resources/audio/Driver 5/5 Mid Vocals.wav
+            C5: configs/resources/audio/Driver 6/6 Mid Vocals.wav
+            C6: configs/resources/audio/Driver 7/7 Mid Vocals.wav
+            C7: configs/resources/audio/Driver 8/8 Mid Vocals.wav
+            C8: configs/resources/audio/Driver 9/9 Mid Vocals.wav
+            C9: configs/resources/audio/Driver 10/10 Mid Vocals.wav
+            C10: configs/resources/audio/Driver 11/11 Mid Vocals.wav
+            C11: configs/resources/audio/Driver 12/12 Mid Vocals.wav
+            C12: configs/resources/audio/Driver 13/13 Mid Vocals.wav
+            C13: configs/resources/audio/Driver 14/14 Mid Vocals.wav
 
     - type: generic
       id: third_page
@@ -83,18 +83,18 @@ pages:
         createAnchor70: false
         stimuli:
             C1: configs/resources/audio/Driver 1/1 High Vocals.wav
-            #C2: configs/resources/audio/Driver 2/2 High Vocals.wav
-            #C3: configs/resources/audio/Driver 4/4 High Vocals.wav
-            #C4: configs/resources/audio/Driver 5/5 High Vocals.wav
-            #C5: configs/resources/audio/Driver 6/6 High Vocals.wav
-            #C6: configs/resources/audio/Driver 7/7 High Vocals.wav
-            #C7: configs/resources/audio/Driver 8/8 High Vocals.wav
-            #C8: configs/resources/audio/Driver 9/9 High Vocals.wav
-            #C9: configs/resources/audio/Driver 10/10 High Vocals.wav
-            #C10: configs/resources/audio/Driver 11/11 High Vocals.wav
-            #C11: configs/resources/audio/Driver 12/12 High Vocals.wav
-            #C12: configs/resources/audio/Driver 13/13 High Vocals.wav
-            #C13: configs/resources/audio/Driver 14/14 High Vocals.wav
+            C2: configs/resources/audio/Driver 2/2 High Vocals.wav
+            C3: configs/resources/audio/Driver 4/4 High Vocals.wav
+            C4: configs/resources/audio/Driver 5/5 High Vocals.wav
+            C5: configs/resources/audio/Driver 6/6 High Vocals.wav
+            C6: configs/resources/audio/Driver 7/7 High Vocals.wav
+            C7: configs/resources/audio/Driver 8/8 High Vocals.wav
+            C8: configs/resources/audio/Driver 9/9 High Vocals.wav
+            C9: configs/resources/audio/Driver 10/10 High Vocals.wav
+            C10: configs/resources/audio/Driver 11/11 High Vocals.wav
+            C11: configs/resources/audio/Driver 12/12 High Vocals.wav
+            C12: configs/resources/audio/Driver 13/13 High Vocals.wav
+            C13: configs/resources/audio/Driver 14/14 High Vocals.wav
 
     - type: finish
       name: Thank you
